# pico-espat

./: .gitignore  AT commands.md  CMakeLists.txt  main.cpp  upload.ps1
include/: i2c_dma.h  mqtt.h  seesaw.h  seesaw_intern.h  usb_cdc.h  ws2812.h
kicad/: analog.kicad_sch  engine_conn.kicad_sch  fp-info-cache  pico-efi.kicad_prl  pico-efi.kicad_pro  pico-efi.kicad_sch
seesaw/: platformio.ini
seesaw/src/: main.cpp
src/: i2c_dma.c  main.cpp  mqtt.cpp  seesaw.cpp  usb_cdc.c  ws2812.cpp
